shardex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shardex
spec:
  selector:
    app: shardex
  ports:
    - port: 6000
      targetPort: 6000
  type: ClusterIP
