shardex/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: shardex
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`shardex.auxtal.xyz`)
      kind: Rule
      services:
        - name: shardex
          port: 6000
  tls:
    certResolver: le
